Внес правки согласно валидатору

--- a/styles/blocks/video/__iframe/video__iframe.css
+++ b/styles/blocks/video/__iframe/video__iframe.css
@@ -2,6 +2,9 @@
     margin-right: 20px;
 }
 
-/* .video__iframe {
-    position: absolute;
-} */
+.video__iframe {
+    border: none;
+    width: 515px;
+    height: 316px;
+}
+
