--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,5 +1,5 @@
 .feynman {
-    background: #f2f2f2 url('../../../images/blocks/feynman/feynman.png') no-repeat bottom left;
+    background: #f2f2f2 url('../../images/blocks/feynman/feynman.png') no-repeat bottom left;
     position: relative;
     min-height: 890px;
     top: -60px;
